# openvpn

./: .travis.yml  CMakeLists.txt  Changes.rst  Makefile.am  README.dco.md  config-msvc.h  config.h.cmake.in  configure.ac  openvpn.sln
.github/workflows/: build.yaml
.travis/: build-check.sh  build-deps.sh
contrib/vcpkg-ports/pkcs11-helper/: 0001-nmake-openssl-1.1.1-support.patch  portfile.cmake
contrib/vcpkg-triplets/: arm64-windows-ovpn.cmake
doc/: Makefile.am  openvpn.8
doc/man-sections/: example-fingerprint.rst  generic-options.rst  protocol-options.rst  tls-options.rst
include/: openvpn-msg.h
src/compat/: Makefile.am  PropertySheet.props  compat.h  compat.vcxproj  compat.vcxproj.filters
src/openvpn/: Makefile.am  auth_token.c  block_dns.c  buffer.c  buffer.h  comp.h  compstub.c  console_builtin.c  crypto.c  crypto.h  crypto_mbedtls.c  crypto_openssl.c  dco.c  dco.h  dhcp.c  error.c  error.h  event.h  forward.c  forward.h  init.c  misc.c  misc.h  mtcp.c  mtu.c  mtu.h  mudp.c  multi.c  multi.h  networking.h  networking_linuxdco.c  networking_linuxdco.h  networking_sitnl.c  networking_windco.c  networking_windco.h  occ.c  occ.h  openvpn.h  openvpn.vcxproj  openvpn.vcxproj.filters  (+28 more)
src/openvpnmsica/: Makefile.am  openvpnmsica.c  openvpnmsica.h  openvpnmsica.vcxproj
src/openvpnserv/: Makefile.am  automatic.c  common.c  interactive.c  openvpnserv.vcxproj  openvpnserv.vcxproj.filters  service.h  validate.c  win32.h
src/tapctl/: Makefile.am  tap.c  tap.h  tapctl.vcxproj
tests/unit_tests/openvpn/: test_argv.c  test_auth_token.c  test_crypto.c  test_misc.c  test_ncp.c  test_networking.c  test_tls_crypt.c
